# custom-memory-allocator

./: CMakeLists.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
lib/memory/: CMakeLists.txt
lib/memory/include/: memory_allocator.h  memory_control.h  memory_stats.h
lib/memory/src/: allocator.c  control.c  heap.c  heap.h  log.c  log.h  stats.c
test/: CMakeLists.txt  main_test_runner.c  test_allocations.c  test_heap_consistency.c  test_policies.c
